[package]
name = "bevy_ecs_ldtk"
description = "An ECS-friendly ldtk plugin for bevy."
version = "0.4.0"
edition = "2021"
authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
repository = "https://github.com/Trouv/bevy_ecs_ldtk"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ldtk", "game", "gamedev", "map-editor"]
categories = ["game-development"]
exclude = ["assets/*", "repo/*", "scripts/*"]

[workspace]
members = ["macros"]

[dependencies]
bevy_ecs_ldtk_macros = { version = "0.4", optional = true, path = "macros" }
bevy_ecs_tilemap = "0.7"
bevy = { version = "0.8", default-features = false, features = ["bevy_sprite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
bevy = "0.8"
bevy_rapier2d = { version = "0.18" }
rand = "0.8"

[features]
default = ["derive"]
derive = ["bevy_ecs_ldtk_macros"]
atlas = ["bevy_ecs_tilemap/atlas"]

[[example]]
name = "platformer"
path = "examples/platformer/main.rs"
