[package]
name = "bevy_ecs_ldtk"
description = "An ECS-friendly ldtk plugin for bevy."
version = "0.13.0"
edition = "2021"
authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
repository = "https://github.com/Trouv/bevy_ecs_ldtk"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ldtk", "game", "gamedev", "map-editor"]
categories = ["game-development"]
exclude = ["assets/*", "repo/*", "scripts/*"]

[workspace]
members = ["macros"]

[dependencies]
bevy_ecs_ldtk_macros = { version = "0.13.0", optional = true, path = "macros" }
bevy_ecs_tilemap = { version = "0.18.0", default-features = false }
bevy = { version = "0.18", default-features = false, features = [
    "bevy_sprite",
] }
derive-getters = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
thiserror = "1.0"
paste = "1.0"
derive_more = "0.99.20"

[dev-dependencies]
bevy = "0.18"
bevy_rapier2d = { git = "https://github.com/buncys/bevy_rapier.git", rev = "8c25504d336c8c9fc7a3c765422d56845cc36075" }
fake = { version = "4.4", features = ["uuid"] }
rand = "0.9"
bevy-inspector-egui = "0.36.0"

[features]
default = ["derive", "render", "internal_levels"]
derive = ["bevy_ecs_ldtk_macros"]
atlas = ["bevy_ecs_tilemap/atlas"]
render = ["bevy_ecs_tilemap/render"]
internal_levels = []
external_levels = []

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "platformer"
path = "examples/platformer/main.rs"

[[example]]
name = "field_instances"
path = "examples/field_instances/main.rs"

[[example]]
name = "collectathon"
path = "examples/collectathon/main.rs"
