[package]
name = "bevy_ecs_ldtk_macros"
description = "Derive macros for bevy_ecs_ldtk."
version = "0.9.0"
edition = "2021"
authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ldtk", "game", "gamedev", "map-editor"]
categories = ["game-development"]

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
