[package]
name = "bevy_ecs_ldtk_macros"
description = "Derive macros for bevy_ecs_ldtk."
version = "0.11.0"
edition = "2021"
authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ldtk", "game", "gamedev", "map-editor"]
categories = ["game-development"]

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0.92", features = ["parsing"] }

[lib]
proc-macro = true
